# hics

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONFIGURE.md  INSTALL.md  LICENSE  README.md
src/: CMakeLists.txt  NotImplementedException.cpp  main.cpp
src/communicator/: CMakeLists.txt  Client.cpp  Client.h  Communicator.proto  ComputationServer.cpp  ComputationServer.h  Server.cpp  Server.h  Util.cpp  Util.h  clientMain.cpp  serverMain.cpp
src/communicator/Messages/: Communicator.grpc.pb.cc  Communicator.grpc.pb.h  Communicator.pb.cc  Communicator.pb.h
src/exceptions/: CommunicationException.h  IllegalArgumentException.h  NotImplementedException.h  PlatformException.h  ResourceException.h  ResultException.h
src/executor/: CMakeLists.txt  ComputationHost.h  Executor.cpp  Executor.h  ImageResult.cpp  ImageResult.h  Interpreter.cpp  Interpreter.h  PlatformPlacer.cpp  PlatformPlacer.h
src/gui/: CMakeLists.txt  DetailDialog.cpp  DetailDialog.ui  DetailDialogHandler.cpp  MainWindow.cpp  MainWindow.h  MainWindowHandler.h  MainWindowSubject.cpp  MainWindowSubject.h  ResultWidget.cpp  ResultWidgetHandler.cpp  StartWidget.cpp  Worker.cpp  Worker.h  WorkerThread.cpp  WorkerThread.h  main.cpp
src/gui/handler/: DetailDialogHandler.h  MainWindowHandler.cpp  MainWindowHandler.h  ResultWidgetHandler.h  StartWidgetHandler.cpp  StartWidgetHandler.h
src/gui/handler/ui/: DetailDialog.cpp  DetailDialog.h  DetailDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ResultWidget.cpp  ResultWidget.h  ResultWidget.ui  StartWidget.cpp  StartWidget.h  StartWidget.ui
src/manager/: CMakeLists.txt  ClassificationRequest.cpp  ClassificationRequest.h  ClassificationResult.cpp  ClassificationResult.h  HostPlacer.cpp  HostPlacer.h  Manager.cpp  Manager.h  ManagerObserver.h  OperationMode.h  PerformanceCalculator.cpp  PerformanceCalculator.h  PerformanceData.cpp  PerformanceData.h  PreProcessor.cpp  PreProcessor.h  computationHosts.json
src/netbuilder/: AlexNetWeightLoader.cpp  AlexNetWeightLoader.h  CMakeLists.txt  DataWrapper.cpp  DataWrapper.h  ImageWrapper.cpp  ImageWrapper.h  JSONModelLoader.h  LayerMaker.cpp  LayerMaker.h  ModelLoader.h  NetBuilder.cpp  NetBuilder.h  NetInfo.cpp  NetInfo.h  WeightLoader.cpp  WeightLoader.h  WeightWrapper.cpp  WeightWrapper.h  Wrapper.h  main.cpp
src/netbuilder/loader/: JSONModelLoader.cpp  JSONModelLoader.h  LabelLoader.cpp  LabelLoader.h  ModelCrawler.cpp  ModelCrawler.h  ModelLoader.cpp  ModelLoader.h  StringLoader.cpp  StringLoader.h  alexnet.json
src/netbuilder/loader/models/: alexnet.json
src/netbuilder/loader/weightloader/: AlexNetWeightLoader.cpp  (+4 more)
src/netbuilder/wrapper/: DataWrapper.cpp  DataWrapper.h  ImageWrapper.cpp  ImageWrapper.h  WeightWrapper.cpp  WeightWrapper.h  Wrapper.cpp  Wrapper.h
src/neuralnet/: CMakeLists.txt  LayerInfo.cpp  LayerInfo.h  MaxPoolingLayer.cpp  NetIterator.h  NeuralNet.cpp  NeuralNet.h  SimpleNetIterator.cpp  SimpleNetIterator.h
src/neuralnet/layers/: ActivationLayer.cpp  ActivationLayer.h  ConcatLayer.cpp  ConcatLayer.h  ConvolutionLayer.cpp  ConvolutionLayer.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  LayerType.cpp  LayerType.h  LocalResponseNormLayer.cpp  LocalResponseNormLayer.h  LossLayer.cpp  LossLayer.h  MaxPoolingLayer.cpp  MaxPoolingLayer.h  NaiveLayer.cpp  NaiveLayer.h  NormalizationLayer.cpp  NormalizationLayer.h  PoolingLayer.cpp  PoolingLayer.h  ReLUActivationLayer.cpp  ReLUActivationLayer.h  SoftMaxLossLayer.cpp  SoftMaxLossLayer.h
src/platform/: CMakeLists.txt  Helper.cpp  Helper.h  LayerFunction.h  PlatformInfo.cpp  PlatformInfo.h  PlatformManager.cpp  PlatformManager.h
src/platform/layerfunctions/: CLFunction.cpp  CLFunction.h  CpuFullyConnectedFunction.cpp  CpuFullyConnectedFunction.h  FullyConnectedFunction.cpp  FullyConnectedFunction.h  LayerFunction.h
src/platform/util/: Dtype.cpp  Dtype.h  im2col.cpp  im2col.h  main.cpp
src/settings/: Configuration.cpp  Configuration.h
src/util/: CMakeLists.txt  Configuration.cpp  Configuration.h
tests/: CMakeLists.txt  MainTest.cpp  MainTest.h  WrapperTest.cpp
tests/communicator/: CMakeLists.txt  ClientServerTest.cpp  ClientServerTest.h  UtilTest.cpp  UtilTest.h  clientMain.cpp  serverTest.cpp
tests/executor/: CMakeLists.txt  ExecutorTest.cpp  ExecutorTest.h
tests/gui/: CMakeLists.txt  MainWindowSubjectTest.cpp  MainWindowSubjectTest.h
tests/gui/catchtest/: CMakeLists.txt  MainWindowSubjectTest.cpp  MainWindowSubjectTest.h
tests/gui/qttest/: CMakeLists.txt  WorkerThreadTest.cpp  WorkerThreadTest.h  main.cpp  main.hpp
tests/manager/: CMakeLists.txt  ClassificationRequestTest.cpp  ClassificationResultTest.cpp  ClassificationResultTest.h  HostPlacerTest.cpp  HostPlacerTest.h  ManagerTest.cpp  OperationModeTest.cpp  OperationModeTest.h  PerformanceCalculatorTest.cpp  PerformanceCalculatorTest.h  PreProcessorTest.cpp  PreProcessorTest.h  SystemTest.cpp
tests/netbuilder/: AlexNetWeightLoaderTest.cpp  CMakeLists.txt  LayerMakerTest.cpp  LayerMakerTest.h  NetBuilderTest.cpp  NetBuilderTest.h  WrapperTest.cpp  WrapperTest.h
tests/neuralnet/: CMakeLists.txt  NeuralNetTest.cpp  NeuralNetTest.h
tests/platform/: CMakeLists.txt  PlatformTest.cpp  PlatformTest.h
tests/platform/util/: im2colTest.cpp
tests/resources/: conv1_bias.txt  conv1_data_alexnet.txt  conv1_weight.txt  conv2_bias.txt  conv2_data_out.txt  conv2_weights.txt  conv3_data_out.txt  conv4_data_out.txt  conv5_out.txt  conv5_relu_out.txt  fc1_bias.txt  fc1_data_flat_split.txt  fc1_data_in.txt  fc1_data_out.txt  fc1_data_split.txt  fc7_in.txt  fc7_out.txt  fc8_out.txt  img_data.txt  img_data_compare.txt  lrn1_data_out.txt  maxpool_data_out.txt  relu1_data_out.txt  sm_out.txt
tests/resources/testing_false_weights/: false_bias_name.h5  false_group_name.h5  right_group_name_empty_bias_dataspace.h5  right_group_name_empty_dataspace.h5
tests/resources/tf_data_script/: alexnet_data_extract.py  conv1_data_alexnet.txt  img_data.txt  myalexnet_forward_newtf.py
tests/util/: FileHelper.cpp  FileHelper.h
(+91 files in other folders)
