add_library(libneuralnet STATIC layers/Layer.cpp layers/Layer.h NetIterator.h SimpleNetIterator.cpp SimpleNetIterator.h NeuralNet.cpp NeuralNet.h LayerInfo.cpp LayerInfo.h layers/PoolingLayer.cpp layers/PoolingLayer.h layers/MaxPoolingLayer.cpp layers/MaxPoolingLayer.h layers/ActivationLayer.cpp layers/ActivationLayer.h layers/ReLUActivationLayer.cpp layers/ReLUActivationLayer.h layers/ConvolutionLayer.cpp layers/ConvolutionLayer.h layers/NormalizationLayer.cpp layers/NormalizationLayer.h layers/LocalResponseNormLayer.cpp layers/LocalResponseNormLayer.h layers/LossLayer.cpp layers/LossLayer.h layers/SoftMaxLossLayer.cpp layers/SoftMaxLossLayer.h layers/InputLayer.cpp layers/InputLayer.h layers/FullyConnectedLayer.cpp layers/FullyConnectedLayer.h)